--- a/code/index.html
+++ b/code/index.html
@@ -9,9 +9,10 @@
   <body>
     <script src="sketch.js"></script>
     <script src="turkeymap.js"></script>
-    <p>Turkey map coloring with four colours implemented by Nurettin Resul Tanyıldızı</p>
+    <p>Turkey map coloring with four colours using Backtracking Algorithm implemented by Nurettin Resul Tanyıldızı</p>
+    <a href=""></a>
     <div id="defdiv">
-      <button id="btn" onclick="location.href = '/index.html'"">Restart</button>
+      <button id="btn" onclick="location.href = './index.html'"">Restart</button>
     </div>
 </body>
 
